[package]
name = "gen-pw"
version = "0.1.0"
edition = "2021"
authors = ["Justus Adam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
rand = "0.8"
either = "1"
log = "0.4"
simple_logger = "4"
